--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,21 @@
 {
-  "routes": [
-    { "src": "/cover.png", "dest": "/cover.png" },
-    { "src": "/icon.png", "dest": "/icon.png" },
-    { "src": "/.well-known/farcaster.json", "dest": "/.well-known/farcaster.json" },
-    { "src": "/(.*)", "dest": "/index.html" }
+  "rewrites": [
+    {
+      "source": "/((?!.*\\.).*)",
+      "destination": "/index.html"
+    }
   ],
   "headers": [
     {
       "source": "/.well-known/farcaster.json",
       "headers": [
         { "key": "Content-Type", "value": "application/json" },
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        { "key": "Cache-Control", "value": "public, max-age=0, must-revalidate" }
+        { "key": "Access-Control-Allow-Origin", "value": "*" }
       ]
     },
     {
-      "source": "/cover.png",
+      "source": "/(.*)",
       "headers": [
-        { "key": "Content-Type", "value": "image/png" },
         { "key": "Access-Control-Allow-Origin", "value": "*" }
       ]
     }
