--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "rewrites": [
     {
       "source": "/((?!.*\\.).*)",
@@ -10,12 +12,6 @@
       "source": "/.well-known/farcaster.json",
       "headers": [
         { "key": "Content-Type", "value": "application/json" },
-        { "key": "Access-Control-Allow-Origin", "value": "*" }
-      ]
-    },
-    {
-      "source": "/(.*)",
-      "headers": [
         { "key": "Access-Control-Allow-Origin", "value": "*" }
       ]
     }
