Fix: Explicit routing for manifest & clean JSON

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
   "outputDirectory": "dist",
   "rewrites": [
     {
+      "source": "/.well-known/farcaster.json",
+      "destination": "/.well-known/farcaster.json"
+    },
+    {
       "source": "/((?!.*\\.).*)",
       "destination": "/index.html"
     }
@@ -12,6 +16,13 @@
       "source": "/.well-known/farcaster.json",
       "headers": [
         { "key": "Content-Type", "value": "application/json" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Cache-Control", "value": "public, max-age=0, must-revalidate" }
+      ]
+    },
+    {
+      "source": "/(.*)",
+      "headers": [
         { "key": "Access-Control-Allow-Origin", "value": "*" }
       ]
     }
