--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@farcaster/frame-sdk": "^0.1.12",
+    "@farcaster/miniapp-wagmi-connector": "^1.1.0",
     "@privy-io/react-auth": "^3.3.0",
     "@rainbow-me/rainbowkit": "^2.2.10",
     "@supabase/supabase-js": "^2.87.3",
