--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coinbase/onchainkit": "latest",
+    "@farcaster/minikit": "latest",
     "@farcaster/frame-sdk": "^0.1.12",
     "@farcaster/miniapp-wagmi-connector": "^1.1.0",
     "@privy-io/react-auth": "^3.3.0",
