--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "viem": "^2.41.2",
+    "vconsole": "^3.15.1",
     "wagmi": "^2.19.5",
     "zustand": "^5.0.8"
   },
