--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@coinbase/onchainkit": "latest",
+    "@coinbase/onchainkit": "^1.1.2",
     "@farcaster/frame-sdk": "^0.1.12",
     "@farcaster/miniapp-wagmi-connector": "^1.1.0",
     "@privy-io/react-auth": "^3.3.0",
@@ -25,8 +25,8 @@
     "howler": "^2.2.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "viem": "^2.41.2",
     "vconsole": "^3.15.1",
+    "viem": "^2.41.2",
     "wagmi": "^2.19.5",
     "zustand": "^5.0.8"
   },
